<resources>
    <string name="app_name">EasyTask</string>
    <string name="title_mytasks">Mytasks</string>
    <string name="title_suche">Suche</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_profile">Profile</string>
    <string name="benutzername">Benutzername</string>
    <string name="passwort">Passwort</string>
    <string name="loginButton">Login</string>
    <string name="easytask_name">EasyTask</string>
    <string name="dienstleistungsart">Dienstleistungsart:</string>
    <string name="todo">TODO</string>
    <string name="service_typ_eingeben">Service Typ eingeben</string>
    <string name="postleitzahl">Postleitzahl</string>
    <string name="dauer_des_auftrags">Dauer des Auftrags:</string>
    <string name="enter_job_duration">Enter job duration</string>
    <string name="bilder_oder_dateien_anh_ngen">Bilder oder Dateien anhängen:</string>
    <string name="dateien_hinzuf_gen">Dateien hinzufügen</string>
    <string name="budget">Budget: $%1$.2f</string>
    <string name="enter_budget">Enter budget</string>
    <string name="euro">€</string>
    <string name="best_tigen">Bestätigen</string>
    <string name="abbrechen">Abbrechen</string>
    <string name="hausnummer">Hausnummer</string>
    <string name="strasse">Straße</string>
    <string name="standort">Standort:</string>
    <string name="datum_und_uhrzeit">Datum und Uhrzeit:</string>
    <string name="enter_job_details">Enter job details</string>
    <string name="auftragsdetails">Auftragsdetails:</string>
    <string name="stern">*</string>
    <string name="mytasks">MyTasks</string>
    <string name="easytaskTitle">EasyTask</string>
    <string name="Start_title_description">zuverlässige und schnelle Vermittlung von Tasks.</string>
    <string name="Start_Benutzer">Ich bin auf der Suche nach Taskern</string>
    <string name="ich_m_chte_mich_als_tasker_anbieten">Ich möchte mich          als Tasker anbieten</string>
    <string name="budgetangabe">Budget:</string>
    <string name="sie_haben_4_ungelesene_nachrichten">Sie haben 4 ungelesene Nachrichten</string>
    <string name="hallo_message_1">QuantumPenguin88: Hallo ich wollte fragen ob es möglich ist, dass Sie um 14 Uhr bei mir sind?</string>
    <string name="antwort_hier_eingeben">Antwort hier eingeben</string>
    <string name="als_ungelesen_markieren">Als ungelesen markieren</string>
    <string name="antworten">Antworten</string>
    <string name="hey_message_2">StarlightGazer42: Hey 20€ für den Job sind echt wenig. Können wir uns auf 35 einigen?</string>
    <string name="task">Task</string>
    <string name="service_type">Service Type: %1$s</string>
    <string name="job_details">Job Details: %1$s</string>
    <string name="date">Date: %1$s</string>
    <string name="time">Time: %1$s</string>
    <string name="street">Street: %1$s</string>
    <string name="house_number">House Number: %1$s</string>
    <string name="zip_code">Zip Code: %1$s</string>
    <string name="duration">Duration: %1$d %2$s</string>
    <string name="test_email">email@example.com</string>
    <string name="profilbild_change">Profilbild ändern</string>
    <string name="status_eingeben">Status eingeben</string>
    <string name="benachrichtigungen_aktivieren">Benachrichtigungen aktivieren</string>
    <string name="datum_auswahl">Datum auswählen</string>
    <string name="farbe_auswahl">Farbe auswählen</string>
    <string name="elektronik">Elektronik</string>
    <string name="hausbau">Hausbau</string>
    <string name="tasks_i_accepted">Tasks I Accepted</string>
    <string name="historie_anzeigen">Historie anzeigen</string>
    <string name="tasks_i_created">Tasks I Created</string>
    <string name="klicken_sie_an_um_die_informationen_anzuzeigen">Klicken Sie an, um alle Informationen anzuzeigen</string>
    <string name="filter">Filter</string>
    <string name="kategorienauswahl">Kategorienauswahl:</string>
    <string name="datum">Datum:</string>
    <string name="preis_doppelpunkt">Preis:</string>
    <string name="zeitraum">Zeitraum:</string>
    <string name="bewertung_doppelpunkt">Bewertung:</string>
    <string name="sortiermoeglichkeiten">Sortiermöglichkeiten:</string>
    <string name="zusaetzliche_filter">Zusätzliche Filter:</string>
    <string name="automatische_standortbestimmung">Automatische Standortbestimmung</string>
    <string name="manuelle_eingabe">Manuelle Eingabe</string>
    <string name="rasenmaehen">Rasenmähen</string>
    <string name="malerarbeiten">Malerarbeiten</string>
    <string name="haushaltsreparaturen">Haushaltsreparaturen</string>
    <string name="elektriker">Elektriker</string>
    <string name="beliebig">Beliebig</string>
    <string name="morgen">Morgen</string>
    <string name="uebermorgen">Übermorgen</string>
    <string name="diese_woche">Diese Woche</string>
    <string name="naechste_woche">Nächste Woche</string>
    <string name="mindestpreis">Mindestpreis:</string>
    <string name="hoechstpreis">Höchstpreis:</string>
    <string name="von">Von:</string>
    <string name="bis">Bis:</string>
    <string name="ist_egal">ist egal</string>
    <string name="drei_sterne_und_hoeher">3 Sterne und höher</string>
    <string name="vier_sterne_und_hoeher">4 Sterne und höher</string>
    <string name="relevanz">Relevanz</string>
    <string name="bewertung">Bewertung</string>
    <string name="entfernung">Entfernung</string>
    <string name="preis">Preis</string>
    <string name="materialien_inklusive">Materialien inklusive</string>
    <string name="werkzeug_inklusive">Werkzeug inklusive</string>
    <string name="haeufig_angeforderte_kategorien">Häufig angeforderte Kategorien</string>
    <string name="neu_eingefuegte_aufgaben_von_anderen_benutzern">Neu eingefügte Aufgaben von anderen Benutzern</string>
    <string name="schnelle_jobs_fuer_schnelles_geld">Schnelle Jobs für schnelles Geld</string>
    <string name="platzhalter">Platzhalter</string>
    <string name="feedback_geben">Feedback geben</string>
</resources>