<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_suche">

    <fragment
        android:id="@+id/navigation_suche"
        android:name="com.app.e_business_easytask.ui.suche.SucheFragment"
        android:label="@string/title_suche"
        tools:layout="@layout/fragment_suche" />

    <fragment
        android:id="@+id/navigation_inbox"
        android:name="com.app.e_business_easytask.ui.inbox.InboxFragment"
        android:label="@string/title_inbox"
        tools:layout="@layout/fragment_inbox" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.app.e_business_easytask.ui.inbox.InboxFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_mytasks"
        android:name="com.app.e_business_easytask.ui.inbox.InboxFragment"
        android:label="@string/title_mytasks"
        tools:layout="@layout/fragment_mytasks" />
</navigation>