<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">

    <!-- Profilbild -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_profile_picture"/>

    <!-- Benutzername -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/benutzername" />

    <!-- E-Mail -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:text="@string/test_email" />

    <!-- Ändern Sie das Profilbild-Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/changeProfileImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/profilbild_change" />

    <!-- Edittext für den Status -->
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/statusEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:hint="@string/status_eingeben"
        android:inputType="text" />

    <!-- Checkbox für Benachrichtigungen -->
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/notificationCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/benachrichtigungen_aktivieren" />

    <!-- Spinner für die Auswahl des Geschlechts -->
    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/gender_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationCheckBox" />

    <!-- Radiogroup für die Auswahl der Interessen -->
    <!-- Datum auswählen-Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/selectDateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/datum_auswahl" />

    <!-- Fortschrittsbalken für den Ladezustand -->
    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:visibility="gone" />

    <!-- Schieberegler für Lautstärke -->

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lautstärke anpassen" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">
        <com.google.android.material.slider.Slider
            android:id="@+id/volumeSeekBar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <!-- Farbauswahl-Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/selectColorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/farbe_auswahl" />

    <!-- Fügen Sie hier weitere UI-Komponenten nach Bedarf hinzu -->
</LinearLayout>
