<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.inbox.InboxFragment">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.inbox.InboxFragment">

    <!-- Ungelesene Nachrichten-Anzeige -->
    <TextView
        android:id="@+id/unreadCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/sie_haben_4_ungelesene_nachrichten"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Nachrichten-Boxen -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/unreadCountTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/messageImageView1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_foreground"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/messageTextView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/hallo_message_1" />

            <EditText
                android:id="@+id/replyEditText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/antwort_hier_eingeben"
                android:autofillHints=""
                android:inputType="text" />

            <CheckBox
                android:id="@+id/selectCheckBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/als_ungelesen_markieren" />

            <Button
                android:id="@+id/openButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/antworten" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/cardView1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/messageImageView2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_foreground"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/messageTextView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/hey_message_2" />

            <EditText
                android:id="@+id/replyEditText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/antwort_hier_eingeben"
                android:autofillHints=""
                android:inputType="text" />

            <CheckBox
                android:id="@+id/selectCheckBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/als_ungelesen_markieren" />

            <Button
                android:id="@+id/openButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/antworten" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
